--- a/queenscorner-frontend/src/app/components/cotizaciones/detalle-cotizacion/detalle-cotizacion.css
+++ b/queenscorner-frontend/src/app/components/cotizaciones/detalle-cotizacion/detalle-cotizacion.css
@@ -58,6 +58,15 @@
   background-color: #545b62;
 }
 
+.btn-negocio {
+  background-color: #17a2b8;
+  color: white;
+}
+
+.btn-negocio:hover:not(:disabled) {
+  background-color: #138496;
+}
+
 .btn-pdf {
   background-color: #28a745;
   color: white;
